--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,10 @@
 header {
   width: 100%;
   min-height: 100px;
-  background-color: #000000;
+  /* background-color: #000000; */
+  background-color: rgba(0,0,0,0.8);
+  border-bottom: #ffffff 1px solid;
+  position: fixed;
 }
 header a {
   text-transform: uppercase;
@@ -28,12 +31,12 @@ header a:active {
 }
 header .header-brand {
   font-size: 20px;
-  padding-top: 30px;
+  padding-top: 40px;
   float: left;
 }
 header .header-links {
   float: right;
-  padding-top: 30px;
+  padding-top: 40px;
 }
 header li {
   display: inline;
@@ -103,7 +106,7 @@ header li {
 .team {
   min-height: 850px;
   background-color: #000000;
-  padding-top: 70px;
+  padding-top: 50px;
 }
 .team .team-title {
   color: #ffffff;
@@ -155,6 +158,9 @@ footer .footer-list:hover {
   text-decoration: none;
   cursor: pointer;
 }
+footer .footer-list:active {
+  color: #e6c868;
+}
 footer .footer-copyright {
   color: #ffffff;
   font-size: 13px;
@@ -162,5 +168,65 @@ footer .footer-copyright {
   padding-top: 50px;
   padding-bottom: 30px;
   letter-spacing: 1.2px;
+}
+
+/* BLOG PAGE */
+/* DOES NOT INCLUDE HEADER AND FOOTER */
+.blog-head-section {
+  min-height: 200px;
+  padding-top: 150px;
+  padding-bottom: 50px;
+  background-color: #000000;
+}
+.blog-head-section .blog-title {
+  font-size: 30px;
+  font-weight: 800;
+  letter-spacing: 1.2;
+  color: #ffffff;
+}
+.blog-head-section .blog-description {
+  font-size: 20px;
+  letter-spacing: 1.2;
+  padding-top: 20px;
+  line-height: 1.5;
+  width: 70%;
+  color: #ffffff;
+}
+/* CARDS */
+.card-section {
+  min-height: 1800px;
+  padding-top: 75px;
+  width: 100%;
+  background-color: #000000;
+}
+.card-row {
+  padding-bottom: 40px;
+}
+.card {
+  border: #ffffff 1px solid;
+  background-color: #000000
+}
+.card:hover {
+  color: #c4c0c0;
+  text-decoration: none;
+  cursor: pointer;
+}
+.card:active{
+  color: #e6c868;
+}
+.card .card-img-top {
+  border: #ffffff 1px solid;
+  border-bottom: #ffffff 1px solid;
+  min-height: 15em;
+}
+.card .card-title {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 800;
+  padding-bottom: 20px;
+}
+.card .card-description {
+  color: #ffffff;
+  font-size: 15px;
 }
 
